test/Fail/InjectivityHITs.agda
{-# OPTIONS --cubical #-}

open import Agda.Builtin.Cubical.Path
open import Agda.Primitive
open import Agda.Primitive.Cubical
open import Agda.Builtin.Bool

variable
  a p         : Level
  A           : Set a
  P           : A â†’ Set p
  x y : A

refl : x â‰¡ x
refl {x = x} = Î» _ â†’ x


data ğ•ŠÂ¹ : Set where
  base : ğ•ŠÂ¹
  loop : base â‰¡ base


g : Bool â†’ I â†’ ğ•ŠÂ¹
g true i = base
g false i = loop i

_ : g false i0 â‰¡ base
_ = refl

_ : g true i0 â‰¡ base
_ = refl

-- non-unique solutions, should not solve either of the metas.
_ : g _ _ â‰¡ base
_ = refl


h : Bool â†’ base â‰¡ base
h true = \ _ â†’ base
h false = loop

_ : h false i0 â‰¡ base
_ = refl

_ : h true i0 â‰¡ base
_ = refl

-- non-unique solutions, should not solve either of the metas.
_ : h _ _ â‰¡ base
_ = refl
